# clickhouse_fdw

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  convert.py  docker-compose-extra.yml  docker-compose.yml  generate_fdw.py  run_tests.sh
.github/workflows/: ci.yml
bench/: bench.go
docker/: Dockerfile.pg  Dockerfile.pg-alpine  clickhouse-config.xml  clickhouse-users.xml
libclickhouse/: CMakeLists.txt  tags
libclickhouse/clickhouse-cpp/: CMakeLists.txt
libclickhouse/clickhouse-cpp/clickhouse/: CMakeLists.txt
libclickhouse/clickhouse-cpp/clickhouse/columns/: array.h  column.h  date.h  enum.cpp  enum.h  factory.cpp  nothing.h  nullable.h  tuple.h  uuid.h
libclickhouse/clickhouse-cpp/clickhouse/types/: types.cpp  types.h
libclickhouse/include/: clickhouse_binary.h  clickhouse_binary.hh  clickhouse_http.h
libclickhouse/src/: clickhouse_binary.c  clickhouse_binary.cc  clickhouse_config.h.in  clickhouse_http.c  clickhouse_internal.h  clickhouse_net.h  clickhouse_parser.c  clickhouse_utils.c  libclickhouse_link.c  test_clickhouse_binary.c  test_clickhouse_http.c
odbc/: CMakeLists.txt  clickhouse-client.cpp  clickhouse-client.h
odbc/example/: odbc_test.c
src/: CMakeLists.txt  adjust.c  binary.cc  clickhouse_binary.cc  clickhouse_deparse.c  clickhouse_fdw--1.0.sql  clickhouse_fdw.c  clickhouse_fdw.control  clickhouse_http.c  clickhouse_link.c  clickhousedb_adjust.c  clickhousedb_connection.c  clickhousedb_deparse.c  clickhousedb_fdw.c  clickhousedb_fdw.h  clickhousedb_option.c  clickhousedb_shipable.c  connection.c  convert.c  custom_types.c  deparse.c  http.c  libclickhouse_link.c  option.c  parser.c  pglink.c  shipable.c  test_clickhouse_binary.c  test_clickhouse_http.c
src/clickhouse-cpp/: CMakeLists.txt
src/clickhouse-cpp-old/clickhouse/: CMakeLists.txt
src/clickhouse-cpp-old/clickhouse/columns/: nothing.cpp  nullable.cpp
src/clickhouse-cpp-old/clickhouse/types/: types.h
src/clickhouse-cpp/clickhouse/: CMakeLists.txt  client.cpp  client.h  protocol.h  query.h
src/clickhouse-cpp/clickhouse/columns/: array.cpp  array.h  column.h  factory.cpp  itemview.h  lowcardinality.cpp  lowcardinality.h  nothing.h  nullable.h  string.cpp  tuple.h
src/clickhouse-cpp/clickhouse/types/: types.cpp  types.h
src/include/: clickhouse_binary.hh  clickhouse_http.h  clickhouse_internal.h  clickhousedb_fdw.h
src/sql/: clickhouse_fdw--1.0--1.1.sql  clickhouse_fdw--1.1--1.2.sql  clickhouse_fdw--1.2--1.3.sql  clickhouse_fdw--1.3--1.4.sql  functions.sql  init.sql
tests/: regression.diffs  regression.out
tests/expected/: binary.out  binary_inserts.out  binary_queries.out  binary_queries_1.out  binary_queries_2.out  deparse_checks.out  engines.out  functions.out  functions_1.out  http.out  http_1.out  http_2.out  import_schema.out  istore.out  istore_binary.out
tests/pgsql/expected/: clickhouse_fdw.out  istore.out
tests/pgsql/sql/: clickhouse_fdw.sql  istore.sql
tests/results/: binary.out  http.out
tests/sql/: binary.sql  binary_inserts.sql  binary_queries.sql  deparse_checks.sql  engines.sql  functions.sql  http.sql  import_schema.sql  istore.sql  istore_binary.sql
